--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@
         <div id="bites">
           <img src="./resources/images/Cookie.png" />
           <h3>NEWS BITES</h3>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+          <div>Cat Emoji Goes Viral</div>
+          <div>Buy Youtube Views</div>
+          <div>Home Business Advertising Ideas</div>
+          <div>Advertising Internet Online</div>
+          <div>Illustration in Marketing Materials</div>
+          <div>Finally a Top Secret Way You Can</div>
         </div>
       </div>
     </div>
     <div id="footer">
+      
     </div>
   </body>
 </html>
