--- a/index.html
+++ b/index.html
@@ -70,14 +70,19 @@
       </div>
     </div>
     <div id="footer">
-      <h4>MY Times  |</h4>
-      <nav>
-        <span><a href="./world">World</a></span>
-        <span><a href="./us">U.S.</a></span>
-        <span><a href="./tech">Tech</a></span>
-        <span><a href="./science">Science</a></span>
-      </nav>
-      <p>© 2016, My Times (A Division of Codecademy bite)</p>
+      <div id="navbar">
+          <h4>MY Times</h4>
+          <h4>|</h4>
+        <nav>
+          <span><a href="./world">World</a></span>
+          <span><a href="./us">U.S.</a></span>
+          <span><a href="./tech">Tech</a></span>
+          <span><a href="./science">Science</a></span>
+        </nav>
+      </div>
+      <div id="copyright">
+        <p>© 2016, My Times (A Division of Codecademy bite)</p>
+      </div>
     </div>
   </body>
 </html>
